--- a/index.css
+++ b/index.css
@@ -278,18 +278,25 @@
         justify-content: space-around;
         background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
         padding: 1rem;
+        height: 4rem;
     }
     
     .header_menu_box li {
         z-index: 10;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        position: relative;
+        overflow: hidden;
+        height: 2.5rem;
+        width: 5rem;
     }
     
     .menu__item {
         text-decoration: none;
         color: black;
         font-size: 18px;
-        font-family: cursive;
-        background-image: linear-gradient(currentColor, currentColor);
+        /* background-image: linear-gradient(currentColor, currentColor); */
         background-position: 0% 100%;
         background-repeat: no-repeat;
         background-size: 0% 2px;
@@ -299,6 +306,15 @@
     .menu__item:hover {
         font-weight: 600;
         background-size: 100% 2px;
+    }
+    
+    .header_menu_box img {
+        width: 80px;
+        height: 16px;
+        position: absolute;
+        top: 24px;
+        left: -78px;
+        transition: 0.5s;
     }
     
     main {
