--- a/index.css
+++ b/index.css
@@ -1,328 +1,227 @@
-    /* Обнуляющие стили */
-    
-    CSS
-    /* Box sizing rules */
-    
-    *,
-    *::before,
-    *::after {
-        box-sizing: border-box;
-    }
-    /* Remove default padding */
-    /* Remove default margin */
-    
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    p,
-    li,
-    figure,
-    figcaption,
-    blockquote,
-    dl,
-    dd {
-        margin: 0;
-    }
-    /* Set core body defaults */
-    
-    body {
-        min-height: 100vh;
-        scroll-behavior: smooth;
-        text-rendering: optimizeSpeed;
-        line-height: 1.5;
-    }
-    /* Remove list styles on ul, ol elements with a class attribute */
-    /* A elements that don't have a class get default styles */
-    
-    a:not([class]) {
-        text-decoration-skip-ink: auto;
-    }
-    /* Make images easier to work with */
-    
-    img {
-        max-width: 100%;
-        display: block;
-    }
-    /* Natural flow and rhythm in articles by default */
-    
-    article>*+* {
-        margin-top: 1em;
-    }
-    /* Inherit fonts for inputs and buttons */
-    
-    input,
-    button,
-    textarea,
-    select {
-        font: inherit;
-    }
-    /* Remove all animations and transitions for people that prefer not to see them */
-    
-    @media (prefers-reduced-motion: reduce) {
-        * {
-            animation-duration: 0.01ms !important;
-            animation-iteration-count: 1 !important;
-            transition-duration: 0.01ms !important;
-            scroll-behavior: auto !important;
-        }
-    }
-    /* Box sizing rules */
-    
-    *,
-    *::before,
-    *::after {
-        box-sizing: border-box;
-    }
-    /* Remove default padding */
-    /* Remove default margin */
-    
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    p,
-    ul[class],
-    ol[class],
-    li,
-    figure,
-    figcaption,
-    blockquote,
-    dl,
-    dd {
-        margin: 0;
-    }
-    /* Set core body defaults */
-    
-    body {
-        min-height: 100vh;
-        scroll-behavior: smooth;
-        text-rendering: optimizeSpeed;
-        line-height: 1.5;
-    }
-    /* Remove list styles on ul, ol elements with a class attribute */
-    
-    ul[class],
-    ol[class] {
-        list-style: none;
-    }
-    /* A elements that don't have a class get default styles */
-    
-    a:not([class]) {
-        text-decoration-skip-ink: auto;
-    }
-    /* Make images easier to work with */
-    
-    img {
-        max-width: 100%;
-        display: block;
-    }
-    /* Natural flow and rhythm in articles by default */
-    
-    article>*+* {
-        margin-top: 1em;
-    }
-    /* Inherit fonts for inputs and buttons */
-    
-    input,
-    button,
-    textarea,
-    select {
-        font: inherit;
-    }
-    /* Remove all animations and transitions for people that prefer not to see them */
-    
-    @media (prefers-reduced-motion: reduce) {
-        * {
-            animation-duration: 0.01ms !important;
-            animation-iteration-count: 1 !important;
-            transition-duration: 0.01ms !important;
-            scroll-behavior: auto !important;
-        }
-    }
-    /* ------------------------------------------------------------------------------------------- */
-    
-    body {
-        background-image: linear-gradient(180deg, rgb(255 255 255 / 70%), rgb(255 255 255 / 80%)), url(https://static.zerochan.net/NARUTO.full.1785595.jpg);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position-y: 33%;
-        background-blend-mode: difference;
-    }
-    
-    header {
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        background: linear-gradient(to right, #853530, #000000);
-        flex-direction: column;
-    }
-    /* добавляем "гамбургер" */
-    
-    .header_name {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .crows {
-        background: url(img/crows.png);
-        width: 271px;
-        height: 229px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: absolute;
-        left: 25px;
-        background-position-y: 30px;
-    }
-    
-    .header_menu {
-        width: 100%;
-    }
-    
-    h1 {
-        position: relative;
-        font-size: 84px;
-        font-family: cursive;
-        text-shadow: 3px 4px 4px rgb(150 150 147);
-        background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
-        -webkit-background-clip: text;
-        -webkit-text-stroke: 4px transparent;
-        cursor: pointer;
-        text-transform: uppercase;
-        display: flex;
-        transition: 2s;
-        align-items: center;
-    }
-    
-    h1:before {
-        content: "";
-        background-image: url(img/shringan.png);
-        background-size: cover;
-        height: 60px;
-        width: 60px;
-        transition: 1s;
-        margin-right: 8rem;
-    }
-    
-    h1:hover:before {
-        transform: rotate(360deg);
-    }
-    
-    h1:after {
-        content: "";
-        background-image: url(img/shringan.png);
-        background-size: cover;
-        height: 60px;
-        width: 60px;
-        transition: 1s;
-        margin-left: 8rem;
-    }
-    
-    h1:hover::after {
-        transform: rotate(360deg);
-    }
-    
-    h1:hover {
-        background: -webkit-linear-gradient(332deg, #d10f0f 5%, #18dddd 53%, #070708 91%);
-        -webkit-background-clip: text;
-        -webkit-text-stroke: 4px transparent;
-        color: #ff002b;
-    }
-    
-    .label_menu {
-        cursor: pointer;
-        display: flex;
-        visibility: hidden;
-    }
-    
-    #icon_menu,
-    #icon_menu::before,
-    #icon_menu::after {
-        position: absolute;
-        width: 67px;
-        height: 30px;
-        background: url(img/kunaiR.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    
-    #menu {
-        opacity: 0;
-    }
-    
-    #icon_menu::before {
-        content: '';
-        transform: rotate(180deg);
-        top: -29px;
-    }
-    
-    #icon_menu::after {
-        content: '';
-        top: 8px;
-        transform: rotate(180deg);
-    }
-    
-    .header_menu_box {
-        display: flex;
-        width: 100%;
-        justify-content: space-around;
-        background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
-        padding: 1rem;
-        height: 4rem;
-    }
-    
-    .header_menu_box li {
-        z-index: 10;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        position: relative;
-        overflow: hidden;
-        height: 2.5rem;
-        width: 5rem;
-    }
-    
-    .menu__item {
-        text-decoration: none;
-        color: black;
-        font-size: 18px;
-        /* background-image: linear-gradient(currentColor, currentColor); */
-        background-position: 0% 100%;
-        background-repeat: no-repeat;
-        background-size: 0% 2px;
-        transition: background-size .3s;
-    }
-    
-    .menu__item:hover {
-        font-weight: 600;
-        background-size: 100% 2px;
-    }
-    
-    .header_menu_box img {
-        width: 80px;
-        height: 16px;
-        position: absolute;
-        top: 24px;
-        left: -78px;
-        transition: 0.5s;
-    }
-    
-    main {
-        padding-top: 14rem;
-    }
-    
-    .lorem {
-        color: chocolate;
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
+/* ------------------------------------------------------------------------------------------- */
+
+body {
+    background-image: linear-gradient(180deg, rgb(255 255 255 / 70%), rgb(255 255 255 / 80%)), url(https://static.zerochan.net/NARUTO.full.1785595.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-y: 26%;
+    background-blend-mode: difference;
+}
+
+header {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: linear-gradient(to right, #853530, #000000);
+    flex-direction: column;
+}
+
+
+/* добавляем "гамбургер" */
+
+.header_name {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 10rem;
+}
+
+.crows {
+    background: url(img/crows.png);
+    width: 271px;
+    height: 229px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    left: 25px;
+    background-position-y: 30px;
+}
+
+.header_menu {
+    width: 100%;
+    background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
+    margin: 0 auto;
+    display: block;
+    text-align: -webkit-center;
+}
+
+h1 {
+    position: relative;
+    font-size: 84px;
+    font-family: cursive;
+    text-shadow: 3px 4px 4px rgb(150 150 147);
+    background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 4px transparent;
+    cursor: pointer;
+    text-transform: uppercase;
+    display: flex;
+    transition: 2s;
+    align-items: center;
+}
+
+.naruto__link a {
+    text-decoration: none;
+    color: #000000;
+}
+
+h1:before {
+    content: "";
+    background-image: url(img/shringan.png);
+    background-size: cover;
+    height: 60px;
+    width: 60px;
+    transition: 1s;
+    margin-right: 8rem;
+}
+
+h1:hover:before {
+    transform: rotate(360deg);
+}
+
+h1:after {
+    content: "";
+    background-image: url(img/shringan.png);
+    background-size: cover;
+    height: 60px;
+    width: 60px;
+    transition: 1s;
+    margin-left: 8rem;
+}
+
+h1:hover::after {
+    transform: rotate(360deg);
+}
+
+h1:hover {
+    background: -webkit-linear-gradient(332deg, #d10f0f 5%, #18dddd 53%, #070708 91%);
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 4px transparent;
+    color: #ff002b;
+}
+
+.label_menu {
+    cursor: pointer;
+    display: flex;
+    visibility: hidden;
+}
+
+#icon_menu,
+#icon_menu::before,
+#icon_menu::after {
+    position: absolute;
+    width: 67px;
+    height: 30px;
+    background: url(img/kunaiR.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#menu {
+    opacity: 0;
+}
+
+#icon_menu::before {
+    content: '';
+    transform: rotate(180deg);
+    top: -29px;
+}
+
+#icon_menu::after {
+    content: '';
+    top: 8px;
+    transform: rotate(180deg);
+}
+
+.header_menu_box {
+    display: flex;
+    max-width: 1200px;
+    padding: 0rem;
+    height: 4rem;
+    margin: 0 2rem 0 2rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_menu_box li {
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    overflow: hidden;
+    height: 2.5rem;
+    width: 5rem;
+}
+
+.menu__item {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    /* background-image: linear-gradient(currentColor, currentColor); */
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+
+.menu__item:hover {
+    font-weight: 600;
+    background-size: 100% 2px;
+}
+
+.header_menu_box img {
+    width: 80px;
+    height: 16px;
+    position: absolute;
+    top: 24px;
+    left: -78px;
+    transition: 0.5s;
+}
+
+.section__top {
+    padding-top: 14rem;
+}
+
+.wrapper {
+    max-width: 1200px;
+    display: block;
+    margin: auto;
+    padding: 0 2rem 0 2rem;
+}
+
+.description {
+    color: darkorange;
+    font-size: 19px;
+    line-height: 1.4;
+}
+
+.main-hero {
+    text-align: center;
+    padding: 1rem;
+    font-size: 41px;
+    font-family: cursive;
+}
+
+.cards-heros {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-hero img {
+    border-style: none;
+    height: 20rem;
+}
