--- a/index.css
+++ b/index.css
@@ -1,227 +1,329 @@
-/* ------------------------------------------------------------------------------------------- */
-
-body {
-    background-image: linear-gradient(180deg, rgb(255 255 255 / 70%), rgb(255 255 255 / 80%)), url(https://static.zerochan.net/NARUTO.full.1785595.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position-y: 26%;
-    background-blend-mode: difference;
-}
-
-header {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background: linear-gradient(to right, #853530, #000000);
-    flex-direction: column;
-}
-
-
-/* добавляем "гамбургер" */
-
-.header_name {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    height: 10rem;
-}
-
-.crows {
-    background: url(img/crows.png);
-    width: 271px;
-    height: 229px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    left: 25px;
-    background-position-y: 30px;
-}
-
-.header_menu {
-    width: 100%;
-    background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
-    margin: 0 auto;
-    display: block;
-    text-align: -webkit-center;
-}
-
-h1 {
-    position: relative;
-    font-size: 84px;
-    font-family: cursive;
-    text-shadow: 3px 4px 4px rgb(150 150 147);
-    background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
-    -webkit-background-clip: text;
-    -webkit-text-stroke: 4px transparent;
-    cursor: pointer;
-    text-transform: uppercase;
-    display: flex;
-    transition: 2s;
-    align-items: center;
-}
-
-.naruto__link a {
-    text-decoration: none;
-    color: #000000;
-}
-
-h1:before {
-    content: "";
-    background-image: url(img/shringan.png);
-    background-size: cover;
-    height: 60px;
-    width: 60px;
-    transition: 1s;
-    margin-right: 8rem;
-}
-
-h1:hover:before {
-    transform: rotate(360deg);
-}
-
-h1:after {
-    content: "";
-    background-image: url(img/shringan.png);
-    background-size: cover;
-    height: 60px;
-    width: 60px;
-    transition: 1s;
-    margin-left: 8rem;
-}
-
-h1:hover::after {
-    transform: rotate(360deg);
-}
-
-h1:hover {
-    background: -webkit-linear-gradient(332deg, #d10f0f 5%, #18dddd 53%, #070708 91%);
-    -webkit-background-clip: text;
-    -webkit-text-stroke: 4px transparent;
-    color: #ff002b;
-}
-
-.label_menu {
-    cursor: pointer;
-    display: flex;
-    visibility: hidden;
-}
-
-#icon_menu,
-#icon_menu::before,
-#icon_menu::after {
-    position: absolute;
-    width: 67px;
-    height: 30px;
-    background: url(img/kunaiR.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#menu {
-    opacity: 0;
-}
-
-#icon_menu::before {
-    content: '';
-    transform: rotate(180deg);
-    top: -29px;
-}
-
-#icon_menu::after {
-    content: '';
-    top: 8px;
-    transform: rotate(180deg);
-}
-
-.header_menu_box {
-    display: flex;
-    max-width: 1200px;
-    padding: 0rem;
-    height: 4rem;
-    margin: 0 2rem 0 2rem;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header_menu_box li {
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: relative;
-    overflow: hidden;
-    height: 2.5rem;
-    width: 5rem;
-}
-
-.menu__item {
-    text-decoration: none;
-    color: black;
-    font-size: 18px;
-    /* background-image: linear-gradient(currentColor, currentColor); */
-    background-position: 0% 100%;
-    background-repeat: no-repeat;
-    background-size: 0% 2px;
-    transition: background-size .3s;
-}
-
-.menu__item:hover {
-    font-weight: 600;
-    background-size: 100% 2px;
-}
-
-.header_menu_box img {
-    width: 80px;
-    height: 16px;
-    position: absolute;
-    top: 24px;
-    left: -78px;
-    transition: 0.5s;
-}
-
-.section__top {
-    padding-top: 14rem;
-}
-
-.wrapper {
-    max-width: 1200px;
-    display: block;
-    margin: auto;
-    padding: 0 2rem 0 2rem;
-}
-
-.description {
-    color: darkorange;
-    font-size: 19px;
-    line-height: 1.4;
-}
-
-.main-hero {
-    text-align: center;
-    padding: 1rem;
-    font-size: 41px;
-    font-family: cursive;
-}
-
-.cards-heros {
-    display: flex;
-    justify-content: space-between;
-}
-
-.card-hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.card-hero img {
-    border-style: none;
-    height: 20rem;
-}
+    /* ------------------------------------------------------------------------------------------- */
+    
+    body {
+        background-image: linear-gradient(180deg, rgb(255 255 255 / 70%), rgb(255 255 255 / 80%)), url(https://static.zerochan.net/NARUTO.full.1785595.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position-y: 26%;
+        background-blend-mode: difference;
+    }
+    
+    header {
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        background: linear-gradient(to right, #853530, #000000);
+        flex-direction: column;
+        z-index: 1000;
+    }
+    /* добавляем "гамбургер" */
+    
+    .header_name {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        height: 10rem;
+    }
+    
+    .crows {
+        background: url(img/crows.png);
+        width: 271px;
+        height: 229px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: absolute;
+        left: 25px;
+        background-position-y: 30px;
+    }
+    
+    .header_menu {
+        width: 100%;
+        background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
+        margin: 0 auto;
+        display: block;
+        text-align: -webkit-center;
+    }
+    
+    h1 {
+        position: relative;
+        font-size: 84px;
+        font-family: cursive;
+        text-shadow: 3px 4px 4px rgb(150 150 147);
+        background: -webkit-linear-gradient(332deg, #EEF85B 5%, #7AEC8D 53%, #09E5C3 91%);
+        -webkit-background-clip: text;
+        -webkit-text-stroke: 4px transparent;
+        cursor: pointer;
+        text-transform: uppercase;
+        display: flex;
+        transition: 1.5s;
+        align-items: center;
+    }
+    
+    .naruto__link a {
+        text-decoration: none;
+        color: #000000;
+    }
+    
+    h1:before {
+        content: "";
+        background-image: url(img/shringan.png);
+        background-size: cover;
+        height: 60px;
+        width: 60px;
+        transition: 1s;
+        margin-right: 8rem;
+    }
+    
+    h1:hover:before {
+        transform: rotate(360deg);
+    }
+    
+    h1:after {
+        content: "";
+        background-image: url(img/shringan.png);
+        background-size: cover;
+        height: 60px;
+        width: 60px;
+        transition: 1s;
+        margin-left: 8rem;
+    }
+    
+    h1:hover::after {
+        transform: rotate(360deg);
+    }
+    
+    h1:hover {
+        background: -webkit-linear-gradient(332deg, #d10f0f 5%, #18dddd 53%, #070708 91%);
+        -webkit-background-clip: text;
+        -webkit-text-stroke: 4px transparent;
+        color: #ff002b;
+    }
+    
+    .burger__menu {
+        position: absolute;
+        width: 3rem;
+        height: 3rem;
+        top: 0;
+        left: 0;
+        padding: 0px;
+        margin: 0.5rem;
+        background: #2d2a2a;
+        box-shadow: 5px 5px 11px -1px rgb(0 0 0 / 96%);
+        border-radius: 9px;
+        visibility: hidden;
+    }
+    
+    .label_menu {
+        cursor: pointer;
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+    
+    #icon_menu,
+    #icon_menu::before,
+    #icon_menu::after {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: url(img/kunaiR.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+        margin: 0;
+        transform: translate(0%, 6%);
+    }
+    
+    #menu {
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+    }
+    
+    #icon_menu::before {
+        content: '';
+        transform: rotate(180deg);
+        top: -22px;
+    }
+    
+    #icon_menu::after {
+        content: '';
+        top: 6px;
+        transform: rotate(180deg);
+    }
+    
+    .header_menu_box {
+        display: flex;
+        max-width: 1200px;
+        padding: 0rem;
+        height: 4rem;
+        margin: 0 2rem 0 2rem;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .header_menu_box li {
+        z-index: 10;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        position: relative;
+        overflow: hidden;
+        height: 2.5rem;
+        width: 5rem;
+    }
+    
+    .menu__item {
+        text-decoration: none;
+        color: black;
+        font-size: 18px;
+        /* background-image: linear-gradient(currentColor, currentColor); */
+        background-position: 0% 100%;
+        background-repeat: no-repeat;
+        background-size: 0% 2px;
+        transition: background-size .3s;
+    }
+    
+    .menu__item:hover {
+        font-weight: 600;
+        background-size: 100% 2px;
+    }
+    
+    .header_menu_box img {
+        width: 80px;
+        height: 16px;
+        position: absolute;
+        top: 24px;
+        left: -78px;
+        transition: 0.5s;
+    }
+    
+    .section__top {
+        padding-top: 14rem;
+    }
+    
+    .wrapper {
+        max-width: 1200px;
+        display: block;
+        margin: auto;
+        padding: 0 2rem 0 2rem;
+    }
+    
+    .description {
+        color: darkorange;
+        font-size: 19px;
+        line-height: 1.4;
+    }
+    
+    .main-hero {
+        text-align: center;
+        padding: 1rem;
+        font-size: 41px;
+        font-family: cursive;
+    }
+    
+    .cards-heros {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    .card-hero {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex: 0 0 25%;
+        margin-bottom: 2rem;
+    }
+    
+    .card-hero img {
+        border-style: none;
+        height: 20rem;
+    }
+    /* Медиа-запросы для разных экранов */
+    
+    @media (max-width: 900px) {
+        /* .cards-heros {
+        display: flex;
+        justify-content: space-between;
+    } */
+        .card-hero {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            flex: 0 0 50%;
+        }
+    }
+    
+    @media (max-width: 800px) {
+        h1:after {
+            margin-left: 2rem;
+        }
+        h1:before {
+            margin-right: 2rem;
+        }
+        .crows {
+            display: none;
+        }
+    }
+    
+    @media (max-width: 600px) {
+        h1:after {
+            display: none;
+        }
+        h1:before {
+            display: none;
+        }
+    }
+    
+    @media (max-width: 527px) {
+        .card-hero {
+            flex: 0 0 100%;
+        }
+        .label_menu {
+            visibility: visible;
+        }
+        .burger__menu {
+            visibility: visible;
+        }
+        .header_name {
+            height: 8rem;
+        }
+        .header_name h1 {
+            font-size: 60px;
+        }
+        .header_menu_box {
+            height: 0rem;
+            margin: 0;
+            flex-direction: column;
+            overflow: hidden;
+            transition: .3s ease height;
+        }
+        .section__top {
+            padding-top: 9rem;
+        }
+        .header_menu_box li {
+            width: 6rem;
+        }
+        .menu__item {
+            font-size: 25px;
+            font-family: cursive;
+        }
+        .trans_menu {
+            height: 14rem;
+        }
+    }
+    
+    @media (max-width: 400px) {
+        .header_name h1 {
+            font-size: 50px;
+        }
+    }
