--- a/heros/heros.css
+++ b/heros/heros.css
@@ -18,11 +18,13 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                width: 10rem;
             }
             
             .card__person img {
                 height: 15rem;
                 cursor: pointer;
+                width: 100%;
             }
             
             .foto__person img {
@@ -37,6 +39,8 @@
                 margin-top: 0.5rem;
                 padding-bottom: 1.5rem;
                 cursor: pointer;
+                width: 9rem;
+                text-align: center;
             }
             
             .infoPerson {
