--- a/game/game.css
+++ b/game/game.css
@@ -3,7 +3,7 @@ h3 {
     padding: 0;
     margin: 0;
     font-size: 22px;
-    color: darkorange;
+    color: floralwhite;
     transition: .3s;
     display: inline-block;
 }
