--- a/video/video.css
+++ b/video/video.css
@@ -54,7 +54,7 @@
         }
         
         .border_bt {
-            border-bottom: 3px solid darkorange;
+            border-bottom: 3px solid floralwhite;
             position: absolute;
             top: 100%;
             left: 50%;
